--- a/Expressions_Personal/index.html
+++ b/Expressions_Personal/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 	<head> 
-		<title> Expressions Industry </title>
+		<title> Expressions Personal </title>
 		<script src="WPF js/script.js"> </script>
 	</head>
+	
 	<body>
-		Table
+		Hair color needed per year 4 x $12.99
 	</body>
 </html>
-
